Optimised the PHP used to load staff tables
Made the following additions:
-> Added the option to mark users as early or late in the sign user in/out staff popup menus. This is done using a range slider that appears when an event is selected.
-> New file to store functions used across the various table PHP files

Made the following changes:
-> Improved the PHP error handling when incorrect data is submitted via a staff popup menu, more appropriate error messages are now sent as a response
-> Staff can no longer sign out users who are marked as being 'away' or 'restricted'
-> Better messages are logged in the recent activity table, stating the nature of the action
-> Fixed an issue where the event tables were displaying incorrect timings, early entries were treated as late vice versa

I also started using Visual Studio Code, I was previously using Atom but since Microsoft axed it I've had to find another alternative

--- a/app.ini
+++ b/app.ini
@@ -5,3 +5,6 @@ db_hostname = localhost
 db_name     = dregDB
 db_user     = dreg_user
 db_password = epq
+
+[preferences]
+pref_in_location = 'The Boarding House'
