Staff users can now change their password
Other changes include:
-> Fixed an issue where event cards were being formatted incorrectly
-> Added a section to 'app.ini' that allows customisation of password complexity requirements

--- a/app.ini
+++ b/app.ini
@@ -8,3 +8,19 @@ db_password = epq
 
 [preferences]
 pref_in_location = 'The Boarding House'
+
+[password complexity]
+; the salt length will be double this because bin2hex is used
+password_salt_length = 16;
+
+password_min_length = 8
+password_max_length = 32
+
+password_min_capitals = 1
+password_max_capitals = 'none'
+
+password_min_numbers = 1
+password_max_numbers = 'none'
+
+password_min_symbols = 1
+password_max_symbols = 'none'
