Administrators can now add/remove staff/users
Other changes include:

-> Added additional settings to 'app.ini' supporting features such as username length
-> Moved some older PHP files into a staff/ folder to help with organisation
-> changed the 'user_name_field' and 'user_event_field' IDs to 'name_field' and 'event_field' in overlay_popups.js

--- a/app.ini
+++ b/app.ini
@@ -9,7 +9,8 @@ db_password = epq
 [preferences]
 pref_in_location = 'The Boarding House'
 
-[password complexity]
+[password settings]
+; changing these settings will not affect already existing accounts until the password is changed
 ; the salt length will be double this because bin2hex is used
 password_salt_length = 16;
 
@@ -24,3 +25,21 @@ password_max_numbers = 'none'
 
 password_min_symbols = 1
 password_max_symbols = 'none'
+
+[username settings]
+; changing these settings will not affect already existing accounts
+username_min_length = 4;
+username_max_length = 20;
+
+username_accepts_capitals = 'yes';
+username_accepts_numbers = 'yes';
+username_accepts_symbols = 'no';
+
+[name settings]
+; These settings are active on both first and last names
+; So, name_min_length applies to both first and last names separately
+name_min_length = 3;
+name_max_length = 30;
+
+; enabling this feature may break some features, like initials if the number(s) is/are at the start
+name_accepts_numbers = 'no'
