--- a/app.ini
+++ b/app.ini
@@ -7,6 +7,7 @@ db_user     = dreg_user
 db_password = epq
 
 [preferences]
+; The location for when users are signed in
 pref_in_location = 'The Boarding House'
 
 [password settings]
