New staff users are required to change their password

--- a/app.ini
+++ b/app.ini
@@ -27,6 +27,8 @@ password_max_numbers = 'none'
 password_min_symbols = 1
 password_max_symbols = 'none'
 
+password_default = 'staffuser' ; This is the default password for staff users
+
 [username settings]
 ; changing these settings will not affect already existing accounts
 username_min_length = 4;
