updated ini file to contain sysadmin credentials

--- a/app.ini
+++ b/app.ini
@@ -2,9 +2,15 @@
 
 [database]
 db_hostname = localhost
-db_name     = dregDB
-db_user     = dreg_user
-db_password = epq
+db_name     = 
+db_user     = 
+db_password = 
+
+[system administrator credentials]
+sys_username =
+sys_password =
+; toggle this to enable/disable the system administrator account
+sys_enabled = 1
 
 [preferences]
 ; The location for when users are signed in
@@ -18,13 +24,13 @@ password_salt_length = 16;
 password_min_length = 8
 password_max_length = 32
 
-password_min_capitals = 1
+password_min_capitals = 0
 password_max_capitals = 'none'
 
 password_min_numbers = 1
 password_max_numbers = 'none'
 
-password_min_symbols = 1
+password_min_symbols = 0
 password_max_symbols = 'none'
 
 password_default = 'staffuser' ; This is the default password for staff users
@@ -46,8 +52,3 @@ name_max_length = 30;
 
 ; enabling this feature may break some features, like initials if the number(s) is/are at the start
 name_accepts_numbers = 'no'
-
-[setup mode]
-; Default logins for setup mode
-setup_username = 'setup';
-setup_password = 'setup';
